[package]
name = "gh-dstat-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread", "macros", "time"] }
rand = "0.8.5"
colored = "2.0.0"
humansize = {version = "2.1.3", features = ["impl_style"]}
clearscreen = "3.0.0"
termplot = "0.1.1"
anyhow = "1.0.70"